# rust-slurp

./: Cargo.toml  README.md
src/: main.rs
