[package]
name = "rust-slurp"
version = "0.1.0"
edition = "2021"

[dependencies]
wayland-client = "0.31"
wayland-protocols = { version = "0.31", features = ["client", "unstable"] }
wayland-protocols-wlr = { version = "0.3.9", features = ["client"] }
wayland-cursor = "0.31"
cairo-rs = { version = "0.19", features = ["png"] }
memmap2 = "0.9"
tempfile = "3.10"